[package]
name = "appctl"
version = "0.1.0"
authors = ["asiafrank <zhangxfdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"


[lib]
test = false
doctest = false