[package]
name = "raft-example"
version = "0.1.0"
authors = ["asiafrank <zhangxfdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = "0.5.0"
grpcio = "0.6"
protobuf = "~2"

[dependencies.rocksdb]
git = "https://github.com/tikv/rust-rocksdb.git"

[build-dependencies]
protoc-grpcio = "1.0.2"