[package]
name = "raft-example"
version = "0.1.0"
authors = ["asiafrank <zhangxfdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "protos"
#path = "protos/mod.rs"

[dependencies]
raft = "0.5.0"
grpcio = { version = "0.5", default-features = false, features = ["openssl-vendored"] }
my-proto = { path = "proto" }

slog = "2.0"
slog-async = "2.1"
slog-stdlog = "4.0"
slog-scope = "4.0"
slog-term = "2.2"